@@ -23,7 +23,7 @@
  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  THE SOFTWARE. -->
  
-<SyntaxMode name = "C#" mimeType="text/x-csharp">
+<SyntaxMode name = "C#" mimeTypes="text/x-csharp">
 
 	<EolSpan color = "preprocessor" rule="PreProcessor">#</EolSpan>
 	<EolSpan color = "comment" rule="XmlDocumentation" tagColor="commenttag">///</EolSpan>
