@@ -23,7 +23,7 @@
  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  THE SOFTWARE. -->
  
-<SyntaxMode name = "C" mimeType="text/x-csrc">
+<SyntaxMode name = "C" mimeTypes="text/x-csrc">
 	<EolSpan color = "preprocessor" rule="PreProcessor">#</EolSpan>
 	<EolSpan color = "comment" rule="Comment">//</EolSpan>
 	
